data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_796.wast
;; 7. **Loop Construct with Overflowing Label Index**:     - **Description**: Construct a loop where branch instructions access labels beyond the nested context scope, aiming to test handling of label indices overflow.     - **Constraint**: Test label index overflow handling within loops.     - **CFG Impact**: Label index overflow leads to invalid branch destinations, distorting the CFG.

(assert_invalid
  (module
    (func
      (loop (result i32)
        (br 1)
      )
    )
  )
  "invalid label"
)